Remove link w atom icon

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/emleddin"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="https://emleddin.github.io/comp-chem-website/index.html"><i class="fas fa-atom"></i></a>
+			<!-- <a target="_blank" href="https://emleddin.github.io/comp-chem-website/index.html"><i class="fas fa-atom"></i></a> -->
 			<!-- <a target="_blank" href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://dev.to/"><i class="fab fa-dev"></i></a>
 			<a target="_blank" href="https://stackoverflow.com/story/"><i class="fab fa-stack-overflow"></i></a>
