--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
 		<div class="tagline">PhD Candidate | Computational Biochemistry</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/emleddin"><i class="fab fa-github"></i></a>
-			<!-- <a target="_blank" href="https://emleddin.github.io/comp-chem-website/index.html"><i class="fas fa-atom"></i></a> -->
-			<!-- <a target="_blank" href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-			<a target="_blank" href="https://dev.to/"><i class="fab fa-dev"></i></a>
-			<a target="_blank" href="https://stackoverflow.com/story/"><i class="fab fa-stack-overflow"></i></a>
-			<a target="_blank" href="https://www.linkedin.com/in/"><i class="fab fa-linkedin"></i></a>
-			<a target="_blank" href="https://medium.com/"><i class="fab fa-medium"></i></a>
-			<a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a>
-			<a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a>
-			<a target="_blank" href="https://codepen.io"><i class="fab fa-codepen"></i></a> -->
+			<a target="_blank" href="https://github.com/emleddin" aria-label="GitHub"><i class="fab fa-github" aria-hidden="true"></i></a>
+			<!-- <a target="_blank" href="https://emleddin.github.io/comp-chem-website/index.html" aria-label="Comp Chem Website"><i class="fas fa-atom" aria-hidden="true"></i></a> -->
+			<!-- <a target="_blank" href="https://twitter.com/" aria-label="Twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+			<a target="_blank" href="https://dev.to/" aria-label="Dev"><i class="fab fa-dev" aria-hidden="true"></i></a>
+			<a target="_blank" href="https://stackoverflow.com/story/" aria-label="StackOverflow"><i class="fab fa-stack-overflow" aria-hidden="true"></i></a>
+			<a target="_blank" href="https://www.linkedin.com/in/" aria-label="LinkedIn"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+			<a target="_blank" href="https://medium.com/" aria-label="Medium"><i class="fab fa-medium" aria-hidden="true"></i></a>
+			<a target="_blank" href="https://www.freecodecamp.org" aria-label="Free Code Camp"><i class="fab fa-free-code-camp" aria-hidden="true"></i></a>
+			<a target="_blank" href="https://www.behance.net" aria-label="Behance"><i class="fab fa-behance" aria-hidden="true"></i></a>
+			<a target="_blank" href="https://codepen.io" aria-label="Code Pen"><i class="fab fa-codepen" aria-hidden="true"></i></a> -->
     </div>
 	<!-- <div class="info">Click the atom above to go to the computational chemistry page!</div> -->
     <div class="info"><a href="https://emleddin.github.io/comp-chem-website/index.html">Computational Chemistry Website</a></div>
