Add OpenMM/MDA tutorial link

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     </div>
 	<!-- <div class="info">Click the atom above to go to the computational chemistry page!</div> -->
     <div class="info"><a href="https://emleddin.github.io/comp-chem-website/index.html">Computational Chemistry Website</a></div>
+    <div class="info"><a href="https://emleddin.github.io/2020-06-05-py-tutorial/">OpenMM and MDAnalysis Tutorial</a></div>
 	</main>
 </body>
 </html>
