Add websites and page links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 
-	<title>Emmett Leddin | Landing</title>
+	<title>Emmett Leddin</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -25,6 +25,22 @@
 		<div class="container">
 			<div class="h1">Emmett Leddin</div>
 			<div class="h2">PhD Candidate | Computational Biochemistry</div>
+			<div class="my-block">
+			<p>
+				<a href="#pubs">Publications</a>
+				<!-- <i class="fas fa-circle" style="color:black;"></i> -->
+				&bull;
+				<a href="#github">GitHub Projects</a>
+				&bull;
+				<a href="#tutorials">Tutorials</a>
+				&bull;
+				<a href="#sites">Websites Maintained</a>
+				&bull;
+				<a href="#hackathons">Hackathons</a>
+				&bull;
+				<a href="#CV">CV</a>
+			</p>
+			</div>
 		</div>
 	</section>
 
@@ -36,7 +52,7 @@
 
 	<!-- Publications heading -->
 	<section class="text-center">
-		<div class="container">
+		<div class="container" id="pubs">
 			<p class="h2">
 				Publications
 			</p>
@@ -96,7 +112,7 @@
 
 	<!-- GitHub projects heading -->
 	<section class="bg-light text-center">
-		<div class="container">
+		<div class="container" id="github">
 			<p class="h2">
 				GitHub Projects
 			</p>
@@ -258,7 +274,7 @@
 
 	<!-- Tutorials heading -->
 	<section class="text-center">
-		<div class="container">
+		<div class="container" id="tutorials">
 			<p class="h2">
 				Tutorials
 			</p>
@@ -303,13 +319,83 @@
 
 <!--
 #############################################
+##           Websites Maintained
+#############################################
+ -->
+
+ <!-- Tutorials heading -->
+ <section class="bg-primary text-center">
+	 <div class="container" id="sites">
+		 <p class="h2">
+			 Websites Maintained
+		 </p>
+	 </div>
+
+	 <!-- Add 1 row of 3 cards -->
+ 	<div class="container">
+ 	<div class="row">
+		<div class="col-md-4">
+ 			<div class="card h-100">
+ 		   		<div class="card-body">
+ 					<p class="card-title">oSTEM@North Texas Website</p>
+ 					<div class="card-img">
+ 						<img src="images/ostem-site-screenshot.png" class="card-img-top" alt="screenshot of oSTEM North Texas site index page">
+ 					</div>
+ 					<p class="card-text">
+ 						A Jekyll-based site for the Out in STEM chapter at the University of North Texas.
+ 					</p>
+ 				</div>
+ 				<div class="card-footer mx-auto">
+ 					<a href="https://ostemnorthtexas.github.io/site/index.html" class="button"><i class="fas fa-sitemap" aria-hidden="true"></i> Website</a>
+ 				</div>
+ 			</div>
+ 	  	</div>
+ 		<div class="col-md-4">
+ 			<div class="card h-100">
+ 				<div class="card-body">
+ 					<p class="card-title">THRIVE Lifeline</p>
+ 					<div class="card-img">
+ 						<img src="images/thrive-site-screenshot.png" class="card-img-top" alt="screenshot of THRIVE Lifeline site index">
+ 					</div>
+ 					<p class="card-text">
+ 						An RMarkdown-based site for THRIVE Lifeline, a text-based crisis hotline staffed by people in STEMM with marginalized identities.
+ 					</p>
+ 				</div>
+ 				<div class="card-footer mx-auto">
+ 					<a href="https://thrivelifeline.org/" class="button"><i class="fas fa-sitemap" aria-hidden="true"></i> Website</a>
+ 				</div>
+ 			</div>
+ 		</div>
+ 	  	<div class="col-md-4">
+ 			<div class="card h-100">
+ 		   		<div class="card-body">
+ 					<p class="card-title">UNT Chemistry Cruntch3 Website</p>
+ 					<div class="card-img">
+ 						<img src="images/cruntch-site-screenshot.png" class="card-img-top" alt="screenshot of UNT Chemistry site index page">
+ 					</div>
+ 					<p class="card-text">
+ 						A Jekyll-based site with the user's guide for the Chemistry Departments's HPC resources at the University of North Texas.
+ 					</p>
+ 				</div>
+ 				<div class="card-footer mx-auto">
+ 					<a href="https://chemistry.unt.edu/~cruntch/" class="button"><i class="fas fa-sitemap" aria-hidden="true"></i> Website</a>
+ 				</div>
+ 			</div>
+ 	  	</div>
+ 	</div>
+ 	</div>
+ 	<!-- End Row 1 -->
+	</section>
+
+<!--
+#############################################
 ##               Hackathons
 #############################################
  -->
 
 	<!-- Tutorials heading -->
-	<section class="bg-primary text-center">
-		<div class="container">
+	<section class="text-center">
+		<div class="container" id="hackathons">
 			<p class="h2">
 				Hackathons
 			</p>
@@ -321,12 +407,14 @@
 		<div class="col-md-6">
 			<div class="card h-100">
 				<div class="card-body">
-					<p class="card-title">Queers in Crisis</p>
+					<p class="card-title">Crisis Resources Challenge</p>
 					<div class="card-img">
 						<img src="images/QueersInCrisis.png" class="card-img-top" alt="presentation slide for Queers in Crisis">
 					</div>
 					<p class="card-text">
-						2020 Hackathon Project for oSTEM modifying the presentation of their site's crisis resources.
+						<i class="fas fa-award" style="color:black; size:3x;"></i> Third place
+						<br> 2020 oSTEM Hackathon Project with the Queers in Crisis team to modify the presentation of the
+						<a href="https://ostem.org/page/crisis-hotlines">oSTEM website's</a> crisis resources.
 					</p>
 				</div>
 				<div class="card-footer mx-auto">
@@ -337,12 +425,14 @@
 	  	<div class="col-md-6">
 			<div class="card h-100">
 		   		<div class="card-body">
-					<p class="card-title">Narwhal App</p>
+					<p class="card-title">Voter Literacy App Challenge</p>
 					<div class="card-img">
 						<img src="images/narwhal-app.png" class="card-img-top" alt="app tile layout">
 					</div>
 					<p class="card-text">
-						2019 Hackathon Project for oSTEM creating a phone app for voter resources.
+						<i class="fas fa-award" style="color:blue; size:3x;"></i> First place
+						<br> 2019 oSTEM Hackathon Project with the Non-Conformist Narwhal team to create a phone app of voter resources for
+						<a href="https://www.lgbtdetroit.org/">LGBT Detroit</a>.
 					</p>
 				</div>
 				<div class="card-footer mx-auto">
@@ -362,8 +452,8 @@
  -->
 
 	<!-- Section for links -->
-	<section class="text-center">
-		<div class="container ">
+	<section class="bg-light text-center">
+		<div class="container" id="CV">
 			<p class="h2">
 				CV
 			</p>
