--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 					</div>
 					<div class="card-footer mx-auto">
 						<a href="https://doi.org/10.1016/bs.apcsb.2019.05.002" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> APCSB</a>
+						<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7036138/" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> PubMed Central</a>
 					</div>
 				</div>
 			</div>
@@ -83,6 +84,7 @@
 					</div>
 					<div class="card-footer mx-auto">
 						<a href="https://doi.org/10.1021/acs.biochem.8b00912" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> Biochemistry</a>
+						<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6363868/" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> PubMed Central</a>
 					</div>
 				</div>
 		  	</div>
@@ -96,6 +98,7 @@
 					</div>
 					<div class="card-footer mx-auto">
 						<a href="https://doi.org/10.1021/acs.chemrestox.8b00055" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> Chem. Res. Tox.</a>
+						<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6130208/" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> PubMed Central</a>
 					</div>
 				</div>
 		  	</div>
