Add publication and ORCID

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<main role="main">
 	<section class="header bg-primary text-center">
 		<div class="container">
-			<div class="h1">Emmett Leddin</div>
+			<div class="h1">Emmett M. Leddin</div>
 			<div class="h2">PhD Candidate | Computational Biochemistry</div>
 			<div class="my-block">
 			<p>
@@ -60,9 +60,29 @@
 		<!-- Add 1 row of 3 cards -->
 		<div class="container">
 		<div class="row">
+		  	<div class="col-md-4">
+				<div class="card h-100">
+			   		<div class="card-body">
+						<div class="card-img">
+							<img src="https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/jctcce/0/jctcce.ahead-of-print/acs.jctc.1c00313/20210604/images/medium/ct1c00313_0011.gif" class="card-img-pub" alt="a three-part image with text sequence/structure alignment, QM/MM, and electron localization function with a sequence, three PDB structures, and an active site">
+						</div>
+						<p class="card-title">June 2021</p>
+						<p class="card-text" style="font-style: italic;">
+							Combining Evolutionary Conservation and Quantum Topological Analyses To Determine Quantum Mechanics Subsystems for Biomolecular Quantum Mechanics/Molecular Mechanics Simulations
+						</p>
+					</div>
+					<div class="card-footer mx-auto">
+						<a href="https://doi.org/10.1021/acs.jctc.1c00313" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> J. Chem. Theory Comput.</a>
+						<a href="https://doi.org/10.26434/chemrxiv.14343137" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> ChemRxiv</a>
+					</div>
+				</div>
+		  	</div>
 			<div class="col-md-4">
 				<div class="card h-100">
 					<div class="card-body">
+						<div class="card-img">
+							<img src="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7036138/bin/nihms-1552959-f0001.jpg" class="card-img-pub" alt="stepwise oxidation of 5mC to 5hmC to 5fC to 5caC">
+						</div>
 						<p class="card-title">October 2019</p>
 						<p class="card-text" style="font-style: italic;">
 							Comparison of DNA and RNA Substrate Effects on TET2 Structure
@@ -77,6 +97,9 @@
 		  	<div class="col-md-4">
 				<div class="card h-100">
 			   		<div class="card-body">
+						<div class="card-img">
+							<img src="https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/bichaw/2019/bichaw.2019.58.issue-5/acs.biochem.8b00912/20190129/images/medium/bi-2018-00912g_0006.gif" class="card-img-pub" alt="a nucleic acid backbone with 5mC the middle where coloration is based on RNA disfavored and DNA preferred as red to both tolerated as purple and RNA preferred and DNA disfavored as orange">
+						</div>
 						<p class="card-title">November 2018</p>
 						<p class="card-text" style="font-style: italic;">
 							Selectivity and Promiscuity in TET-mediated oxidation of 5-methylcytosine in DNA and RNA
@@ -88,12 +111,21 @@
 					</div>
 				</div>
 		  	</div>
+		</div>
+		</div>
+		<!-- End Row 1 -->
+		<!-- Add 1 row of 1 card -->
+		<div class="container">
+		<div class="row">
 		  	<div class="col-md-4">
 				<div class="card h-100">
 			   		<div class="card-body">
+						<div class="card-img">
+							<img src="https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/crtoec/2018/crtoec.2018.31.issue-8/acs.chemrestox.8b00055/20180813/images/medium/tx-2018-000553_0012.gif" class="card-img-pub" alt="two-part image with a PDB structure to the left and the extension activity to the right">
+						</div>
 						<p class="card-title">July 2018</p>
 						<p class="card-text" style="font-style: italic;">
-							Characterization of nine cancer-associated variants in human DNA polymerase kappa
+							Characterization of Nine Cancer-Associated Variants in Human DNA Polymerase kappa
 						</p>
 					</div>
 					<div class="card-footer mx-auto">
@@ -104,7 +136,7 @@
 		  	</div>
 		</div>
 		</div>
-		<!-- End Row 1 -->
+		<!-- End Row 2 -->
 	</section>
 
 <!--
@@ -471,6 +503,7 @@
 <section class="footer">
 	<p class="text-center" style="font-size: 60px">
 	  <a target="_blank" href="https://github.com/emleddin" aria-label="GitHub"><i class="fab fa-github" aria-hidden="true"></i></a>
+	  <a target="_blank" href="https://orcid.org/0000-0003-1610-0092" aria-label="ORCID"><i class="fab fa-orcid" aria-hidden="true"></i></a>
 	</p>
 </section>
 
