--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X2J6DS26HR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X2J6DS26HR');
+</script>
+
 	<title>Emmett Leddin</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
