--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 	<main role="main">
 	<section class="header bg-primary text-center">
 		<div class="container">
-			<div class="h1">Emmett M. Leddin</div>
-			<div class="h2">PhD Candidate | Computational Biochemistry</div>
+			<div><h1>Emmett M. Leddin</h1></div>
+			<div><h2>PhD Candidate | Computational Biochemistry</h2></div>
 			<div class="my-block">
 			<p>
 				<a href="#pubs">Publications</a>
@@ -63,9 +63,9 @@
 	<!-- Publications heading -->
 	<section class="text-center">
 		<div class="container" id="pubs">
-			<p class="h2">
+			<h2>
 				Publications
-			</p>
+			</h2>
 		</div>
 		<!-- Add 1 row of 3 cards -->
 		<div class="container">
@@ -74,7 +74,7 @@
 				<div class="card h-100">
 			   		<div class="card-body">
 						<div class="card-img">
-							<img src="https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/jctcce/0/jctcce.ahead-of-print/acs.jctc.1c00313/20210604/images/medium/ct1c00313_0011.gif" class="card-img-pub" alt="a three-part image with text sequence/structure alignment, QM/MM, and electron localization function with a sequence, three PDB structures, and an active site">
+							<img src="https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/jctcce/0/jctcce.ahead-of-print/acs.jctc.1c00313/20210604/images/medium/ct1c00313_0011.gif" class="card-img-pub" alt="a 3-part image with text sequence/structure alignment, QM/MM, and electron localization function with a sequence, 3 PDB structures, and an active site">
 						</div>
 						<p class="card-title">June 2021</p>
 						<p class="card-text" style="font-style: italic;">
@@ -158,9 +158,9 @@
 	<!-- GitHub projects heading -->
 	<section class="bg-light text-center">
 		<div class="container" id="github">
-			<p class="h2">
+			<h2>
 				GitHub Projects
-			</p>
+			</h2>
 		</div>
 
 	<!-- Add 1 row of 3 cards -->
@@ -295,7 +295,7 @@
 		   		<div class="card-body">
 					<p class="card-title">THRIVE Lifeline Resource App</p>
 					<div class="card-img">
-						<img src="images/thrive-shiny-app.png" class="card-img-top" alt="table screenshot">
+						<img src="images/thrive-shiny-app.png" class="card-img-top" alt="shiny table screenshot">
 					</div>
 					<p class="card-text">
 						An R Shiny app to render a CSV.
@@ -320,9 +320,9 @@
 	<!-- Tutorials heading -->
 	<section class="text-center">
 		<div class="container" id="tutorials">
-			<p class="h2">
+			<h2>
 				Tutorials
-			</p>
+			</h2>
 		</div>
 
 	<!-- Add 1 row of 3 cards -->
@@ -371,9 +371,9 @@
  <!-- Tutorials heading -->
  <section class="bg-primary text-center">
 	 <div class="container" id="sites">
-		 <p class="h2">
+		 <h2>
 			 Websites Maintained
-		 </p>
+		 </h2>
 	 </div>
 
 	 <!-- Add 1 row of 3 cards -->
@@ -441,9 +441,9 @@
 	<!-- Tutorials heading -->
 	<section class="text-center">
 		<div class="container" id="hackathons">
-			<p class="h2">
+			<h2>
 				Hackathons
-			</p>
+			</h2>
 		</div>
 
 	<!-- Add 1 row of 3 cards -->
@@ -499,9 +499,9 @@
 	<!-- Section for links -->
 	<section class="bg-light text-center">
 		<div class="container" id="CV">
-			<p class="h2">
+			<h2>
 				CV
-			</p>
+			</h2>
 		</div>
 
 	<iframe src="https://docs.google.com/viewer/viewer?url=https://github.com/emleddin/CV/raw/main/EML-CV-GH.pdf&embedded=true" style="width:75%; height:500px;" frameborder="0"></iframe>
