Update image link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<div class="card h-100">
 			   		<div class="card-body">
 						<div class="card-img">
-							<img src="https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/jctcce/0/jctcce.ahead-of-print/acs.jctc.1c00313/20210604/images/medium/ct1c00313_0011.gif" class="card-img-pub" alt="a 3-part image with text sequence/structure alignment, QM/MM, and electron localization function with a sequence, 3 PDB structures, and an active site">
+							<img src="https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/jctcce/2021/jctcce.2021.17.issue-7/acs.jctc.1c00313/20210706/images/medium/ct1c00313_0011.gif" class="card-img-pub" alt="a 3-part image with text sequence/structure alignment, QM/MM, and electron localization function with a sequence, 3 PDB structures, and an active site">
 						</div>
 						<p class="card-title">June 2021</p>
 						<p class="card-text" style="font-style: italic;">
