--- a/index.html
+++ b/index.html
@@ -449,7 +449,26 @@
 	<!-- Add 1 row of 3 cards -->
 	<div class="container">
 	<div class="row">
-		<div class="col-md-6">
+		<!-- <div class="col-md-6"> -->
+		<div class="col-md-4">
+			<div class="card h-100">
+				<div class="card-body">
+					<p class="card-title">Real-World Issue Challenge</p>
+					<div class="card-img">
+						<img src="images/access-map.png" class="card-img-top" alt="AccessMap homepage which shows a map with pins">
+					</div>
+					<p class="card-text">
+						<i class="fas fa-award" style="color:blue; size:3x;"></i> First place
+						<br> 2021 oSTEM Hackathon Project with the Spoopy team to address the issue of college campus inaccessibility.
+					</p>
+				</div>
+				<div class="card-footer mx-auto">
+					<a href="https://github.com/emleddin/AccessApp" class="button"><i class="fab fa-github" aria-hidden="true"></i> GitHub</a>
+				</div>
+			</div>
+		</div>
+		<!-- <div class="col-md-6"> -->
+		<div class="col-md-4">
 			<div class="card h-100">
 				<div class="card-body">
 					<p class="card-title">Crisis Resources Challenge</p>
@@ -467,7 +486,8 @@
 				</div>
 			</div>
 		</div>
-	  	<div class="col-md-6">
+	  	<!-- <div class="col-md-6"> -->
+		<div class="col-md-4">
 			<div class="card h-100">
 		   		<div class="card-body">
 					<p class="card-title">Voter Literacy App Challenge</p>
