Add PARP1 paper

--- a/index.html
+++ b/index.html
@@ -70,6 +70,22 @@
 		<!-- Add 1 row of 3 cards -->
 		<div class="container">
 		<div class="row">
+			<div class="col-md-4">
+				<div class="card h-100">
+			   		<div class="card-body">
+						<div class="card-img">
+							<img src="https://www.biorxiv.org/content/biorxiv/early/2021/11/21/2021.11.21.469407/F1.medium.gif" class="card-img-pub" alt="workflow starting with HyDn-SNP-S going to both MD and the PFAM database, looking for compensatory mutation, and returning to MD">
+						</div>
+						<p class="card-title">November 2021 (preprint)</p>
+						<p class="card-text" style="font-style: italic;">
+							Computational Compensatory Mutation Discovery Approach: Predicting a PARP1 Variant Rescue Mutation
+						</p>
+					</div>
+					<div class="card-footer mx-auto">
+						<a href="https://doi.org/10.1101/2021.11.21.469407" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> BioRxiv</a>
+					</div>
+				</div>
+		  	</div>
 		  	<div class="col-md-4">
 				<div class="card h-100">
 			   		<div class="card-body">
@@ -104,7 +120,13 @@
 					</div>
 				</div>
 			</div>
-		  	<div class="col-md-4">
+		</div>
+		</div>
+		<!-- End Row 1 -->
+		<!-- Add 1 row of 2 cards -->
+		<div class="container">
+		<div class="row">
+			<div class="col-md-4">
 				<div class="card h-100">
 			   		<div class="card-body">
 						<div class="card-img">
@@ -121,12 +143,6 @@
 					</div>
 				</div>
 		  	</div>
-		</div>
-		</div>
-		<!-- End Row 1 -->
-		<!-- Add 1 row of 1 card -->
-		<div class="container">
-		<div class="row">
 		  	<div class="col-md-4">
 				<div class="card h-100">
 			   		<div class="card-body">
