--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
  						<img src="images/cruntch-site-screenshot.png" class="card-img-top" alt="screenshot of UNT Chemistry site index page">
  					</div>
  					<p class="card-text">
- 						A Jekyll-based site with the user's guide for the Chemistry Departments's HPC resources at the University of North Texas.
+ 						An MkDocs site with the user's guide for the Chemistry Departments's HPC resources at the University of North Texas.
  					</p>
  				</div>
  				<div class="card-footer mx-auto">
@@ -549,7 +549,10 @@
 <section class="footer">
 	<p class="text-center" style="font-size: 60px">
 	  <a target="_blank" href="https://github.com/emleddin" aria-label="GitHub"><i class="fab fa-github" aria-hidden="true"></i></a>
+	  <a target="_blank" href="https://gist.github.com/emleddin" aria-label="GitHub Gist"><i class="fas fa-code" aria-hidden="true"></i></a>
 	  <a target="_blank" href="https://orcid.org/0000-0003-1610-0092" aria-label="ORCID"><i class="fab fa-orcid" aria-hidden="true"></i></a>
+	  <a target="_blank" href="https://www.researchgate.net/profile/Emmett-Leddin-2" aria-label="ResearchGate"><i class="fab fa-researchgate" aria-hidden="true"></i></a>
+
 	</p>
 </section>
 
