Remove Candidate :tada:

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<section class="header bg-primary text-center">
 		<div class="container">
 			<div><h1>Emmett M. Leddin</h1></div>
-			<div><h2>PhD Candidate | Computational Biochemistry</h2></div>
+			<div><h2>PhD | Computational Biochemistry</h2></div>
 			<div class="my-block">
 			<p>
 				<a href="#pubs">Publications</a>
