--- a/index.html
+++ b/index.html
@@ -556,7 +556,10 @@
 			</h2>
 		</div>
 
-	<iframe src="https://docs.google.com/viewer/viewer?url=https://github.com/emleddin/CV/raw/main/EML-CV-GH.pdf&embedded=true" style="width:75%; height:500px;" frameborder="0"></iframe>
+	<!-- <iframe src="https://docs.google.com/viewer/viewer?url=https://github.com/emleddin/CV/raw/main/EML-CV-GH.pdf&embedded=true" style="width:75%; height:500px;" frameborder="0"></iframe> -->
+	<object type="application/pdf" data="https://docs.google.com/viewer/viewer?url=https://github.com/emleddin/CV/raw/main/EML-CV-GH.pdf&embedded=true" style="width:75%;height:500px">
+    <p>If the PDF doesn't load, you can access it through the <a> href="https://github.com/emleddin/CV/blob/main/EML-CV-GH.pdf">CV GitHub repository</a>.</p>
+	</object>
 	</section>
 
 	</main>
