--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
+	<!-- Add Academic Icons! (for Google Scholar) -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons/css/academicons.min.css">
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="css/themes/green-white.css">
 	<link rel="stylesheet" href="css/themes/custom.css">
@@ -571,7 +573,7 @@
 	  <a target="_blank" href="https://gist.github.com/emleddin" aria-label="GitHub Gist"><i class="fas fa-code" aria-hidden="true"></i></a>
 	  <a target="_blank" href="https://orcid.org/0000-0003-1610-0092" aria-label="ORCID"><i class="fab fa-orcid" aria-hidden="true"></i></a>
 	  <a target="_blank" href="https://www.researchgate.net/profile/Emmett-Leddin-2" aria-label="ResearchGate"><i class="fab fa-researchgate" aria-hidden="true"></i></a>
-
+	  <a target="_blank" href="https://scholar.google.com/citations?user=4qxhNFkAAAAJ&hl=en" aria-label="Google Scholar"><i class="ai ai-google-scholar-square" aria-hidden="true"></i></a>
 	</p>
 </section>
 
