--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
 				<div class="card h-100">
 			   		<div class="card-body">
 						<div class="card-img">
-							<img src="images/TOC-RdRp.png" class="card-img-pub" alt="network analysis communications between the RdRp regions of RNA, NSP8-a, NSP8-b, NSP7, Polymerase, NiRAN, and Interface">
+							<img src="https://www.biorxiv.org/content/biorxiv/early/2021/11/21/2021.11.21.469407/F1.medium.gif" class="card-img-pub" alt="workflow starting with HyDn-SNP-S going to both MD and the PFAM database, looking for compensatory mutation, and returning to MD">
 						</div>
-						<p class="card-title">February 2022 (preprint)</p>
+						<p class="card-title">April 2022 (preprint)</p>
 						<p class="card-text" style="font-style: italic;">
-							Impact of Remdesivir Incorporation Along the Primer Strand on SARS-CoV-2 RNA-dependent RNA polymerase
+							Computational Compensatory Mutation Discovery Approach: Predicting a PARP1 Variant Rescue Mutation
 						</p>
 					</div>
 					<div class="card-footer mx-auto">
-						<a href="https://doi.org/10.26434/chemrxiv-2022-4s2c7" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> ChemRxiv</a>
+						<a href="https://doi.org/10.1101/2021.11.21.469407" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> BioRxiv</a>
 					</div>
 				</div>
 		  	</div>
@@ -92,15 +92,16 @@
 				<div class="card h-100">
 			   		<div class="card-body">
 						<div class="card-img">
-							<img src="https://www.biorxiv.org/content/biorxiv/early/2021/11/21/2021.11.21.469407/F1.medium.gif" class="card-img-pub" alt="workflow starting with HyDn-SNP-S going to both MD and the PFAM database, looking for compensatory mutation, and returning to MD">
+							<img src="https://pubs.acs.org/cms/10.1021/acs.jcim.2c00201/asset/images/medium/ci2c00201_0008.gif" class="card-img-pub" alt="network analysis communications between the RdRp regions of RNA, NSP8-a, NSP8-b, NSP7, Polymerase, NiRAN, and Interface">
 						</div>
-						<p class="card-title">November 2021 (preprint)</p>
+						<p class="card-title">April 2022</p>
 						<p class="card-text" style="font-style: italic;">
-							Computational Compensatory Mutation Discovery Approach: Predicting a PARP1 Variant Rescue Mutation
+							Impact of Remdesivir Incorporation along the Primer Strand on SARS-CoV-2 RNA-Dependent RNA Polymerase
 						</p>
 					</div>
 					<div class="card-footer mx-auto">
-						<a href="https://doi.org/10.1101/2021.11.21.469407" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> BioRxiv</a>
+						<a href="https://doi.org/10.1021/acs.jcim.2c00201" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> J. Chem. Inf. Model.</a>
+						<a href="https://doi.org/10.26434/chemrxiv-2022-4s2c7" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> ChemRxiv</a>
 					</div>
 				</div>
 		  	</div>
@@ -560,8 +561,8 @@
 
 	<!-- <iframe src="https://docs.google.com/viewer/viewer?url=https://github.com/emleddin/CV/raw/main/EML-CV-GH.pdf&embedded=true" style="width:75%; height:500px;" frameborder="0"></iframe> -->
 	<object type="application/pdf" data="https://docs.google.com/viewer/viewer?url=https://github.com/emleddin/CV/raw/main/EML-CV-GH.pdf&embedded=true" style="width:75%;height:500px">
-    <p>If the PDF doesn't load, you can access it through the <a> href="https://github.com/emleddin/CV/blob/main/EML-CV-GH.pdf">CV GitHub repository</a>.</p>
 	</object>
+	    <p>If the PDF doesn't load, you can access it through my <a href="https://github.com/emleddin/CV/blob/main/EML-CV-GH.pdf">CV GitHub repository</a>.</p>
 	</section>
 
 	</main>
@@ -574,6 +575,7 @@
 	  <a target="_blank" href="https://orcid.org/0000-0003-1610-0092" aria-label="ORCID"><i class="fab fa-orcid" aria-hidden="true"></i></a>
 	  <a target="_blank" href="https://www.researchgate.net/profile/Emmett-Leddin-2" aria-label="ResearchGate"><i class="fab fa-researchgate" aria-hidden="true"></i></a>
 	  <a target="_blank" href="https://scholar.google.com/citations?user=4qxhNFkAAAAJ&hl=en" aria-label="Google Scholar"><i class="ai ai-google-scholar-square" aria-hidden="true"></i></a>
+	  <a target="_blank" href="https://academictree.org/chemistry/peopleinfo.php?pid=875378" aria-label="Chemistry Academic Tree"><i class="fas fa-tree" aria-hidden="true"></i></a>
 	</p>
 </section>
 
